updated configure and make system
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26708 72102866-910b-0410-8b05-ffd578937521

--- a/Tools/configure.ac
+++ b/Tools/configure.ac
@@ -10,7 +10,7 @@ fi
 #--------------------------------------------------------------------
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
 
-AC_CONFIG_SUBDIRS([ddbd fswatcher gmds lsfupdater searchtool thumbnailer wopen])
+AC_CONFIG_SUBDIRS([ddbd fswatcher lsfupdater searchtool thumbnailer wopen])
 
 AC_CONFIG_FILES([GNUmakefile])
 
