added autoconf files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26714 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/gmds/GNUmakefile.in
+++ b/GWMetadata/gmds/GNUmakefile.in
@@ -5,22 +5,14 @@ RPM_DISABLE_RELOCATABLE=YES
 
 include $(GNUSTEP_MAKEFILES)/common.make
 
-SUBPROJECTS = Extractors
-
-TOOL_NAME = mdextractor
-
-mdextractor_OBJC_FILES = mdextractor.m \
-                  updater.m 
-
-mdextractor_TOOL_LIBS += -lgnustep-gui
-mdextractor_TOOL_LIBS += -lMDKit
-mdextractor_TOOL_LIBS += -lDBKit
-
+SUBPROJECTS = \
+gmds \
+mdextractor \
+mdfind
+        
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
-
-include $(GNUSTEP_MAKEFILES)/tool.make
 
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
