Minor correction to GNUmakefile.in
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@26872 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -8,6 +8,8 @@ include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = @PACKAGE_NAME@
 VERSION = @PACKAGE_VERSION@
+SVN_BASE_URL = svn+ssh://svn.gna.org/svn/gnustep/apps
+SVN_MODULE_NAME = gworkspace
 
 #
 # subprojects
