Set GNUSTEP_CORE_SOFTWARE to YES so that gworkspace is installed by default in SYSTEM if gnustep-make has been configured with --disable-packages
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@27340 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -1,6 +1,7 @@
-
 PACKAGE_NEEDS_CONFIGURE = YES
 
+GNUSTEP_CORE_SOFTWARE = YES
+export GNUSTEP_CORE_SOFTWARE
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = @PACKAGE_NAME@
@@ -18,7 +19,7 @@ SUBPROJECTS = FSNode \
 	      			  Operation \
 	      			  Recycler \
 	      			  GWorkspace 
-						 
+
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
