--- a/GWMetadata/MDFinder/GNUmakefile
+++ b/GWMetadata/MDFinder/GNUmakefile
@@ -2,6 +2,7 @@
 GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
 RPM_DISABLE_RELOCATABLE=YES
 
+GNUSTEP_CORE_SOFTWARE = YES
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = MDFinder
