--- a/GWMetadata/gmds/mdfind/GNUmakefile.in
+++ b/GWMetadata/gmds/mdfind/GNUmakefile.in
@@ -1,4 +1,5 @@
 
+GNUSTEP_CORE_SOFTWARE = YES
 include $(GNUSTEP_MAKEFILES)/common.make
 
 ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
