--- a/GWorkspace/Desktop/XBundles/XDesktopWindow/GNUmakefile
+++ b/GWorkspace/Desktop/XBundles/XDesktopWindow/GNUmakefile
@@ -3,6 +3,7 @@
 GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
 RPM_DISABLE_RELOCATABLE=YES
 
+GNUSTEP_CORE_SOFTWARE = YES
 include $(GNUSTEP_MAKEFILES)/common.make
 
 BUNDLE_NAME = XDesktopWindow
