--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -1,6 +1,7 @@
 
 PACKAGE_NEEDS_CONFIGURE = YES
 
+GNUSTEP_CORE_SOFTWARE = YES
 include $(GNUSTEP_MAKEFILES)/common.make
 
 PACKAGE_NAME = @PACKAGE_NAME@
