Removed GNUSTEP_CORE_SOFTWARE=YES from makefiles and instead set PACKAGE_NAME=gworkspace
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@27354 72102866-910b-0410-8b05-ffd578937521

--- a/DBKit/GNUmakefile.in
+++ b/DBKit/GNUmakefile.in
@@ -1,8 +1,7 @@
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
-PACKAGE_NAME = DBKit
 LIBRARY_VAR  = DBKIT
 LIBRARY_NAME = libDBKit
 
