--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -1,10 +1,9 @@
 PACKAGE_NEEDS_CONFIGURE = YES
 
-GNUSTEP_CORE_SOFTWARE = YES
-export GNUSTEP_CORE_SOFTWARE
+PACKAGE_NAME = gworkspace
+export PACKAGE_NAME
 include $(GNUSTEP_MAKEFILES)/common.make
 
-PACKAGE_NAME = @PACKAGE_NAME@
 VERSION = @PACKAGE_VERSION@
 SVN_BASE_URL = svn+ssh://svn.gna.org/svn/gnustep/apps
 SVN_MODULE_NAME = gworkspace
