--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -4,7 +4,7 @@ PACKAGE_NEEDS_CONFIGURE = YES
 ADDITIONAL_INCLUDE_DIRS += @ADDITIONAL_INCLUDE_DIRS@
 ADDITIONAL_LIB_DIRS += @ADDITIONAL_LIB_DIRS@
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 FRAMEWORK_NAME = MDKit
