--- a/GWorkspace/Desktop/XBundles/GNUmakefile
+++ b/GWorkspace/Desktop/XBundles/GNUmakefile
@@ -1,12 +1,8 @@
-# Install into the system root by default
-GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
-RPM_DISABLE_RELOCATABLE=YES
-
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 SUBPROJECTS = XDesktopWindow 
-						 
+
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
