--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -1,10 +1,9 @@
 
 PACKAGE_NEEDS_CONFIGURE = YES
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
-PACKAGE_NAME = @PACKAGE_NAME@
 VERSION = @PACKAGE_VERSION@
 
 #
