--- a/GWMetadata/GNUmakefile.in
+++ b/GWMetadata/GNUmakefile.in
@@ -1,7 +1,7 @@
 
 PACKAGE_NEEDS_CONFIGURE = YES
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 #
@@ -11,7 +11,7 @@ SUBPROJECTS = MDKit \
               gmds \
 	      			Preferences \
 	      			MDFinder
-						 
+
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
