--- a/GWMetadata/gmds/gmds/GNUmakefile.in
+++ b/GWMetadata/gmds/gmds/GNUmakefile.in
@@ -1,5 +1,5 @@
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 ADDITIONAL_INCLUDE_DIRS += @SQLITE_INCLUDE_DIRS@
