--- a/GWMetadata/gmds/mdextractor/Extractors/JpegExtractor/GNUmakefile
+++ b/GWMetadata/gmds/mdextractor/Extractors/JpegExtractor/GNUmakefile
@@ -1,8 +1,4 @@
-# Install into the system root by default
-GNUSTEP_INSTALLATION_DOMAIN=SYSTEM
-RPM_DISABLE_RELOCATABLE=YES
-
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 BUNDLE_NAME = JpegExtractor
