--- a/Tools/ddbd/GNUmakefile.in
+++ b/Tools/ddbd/GNUmakefile.in
@@ -1,7 +1,7 @@
 
 PACKAGE_NEEDS_CONFIGURE = YES
 
-GNUSTEP_CORE_SOFTWARE = YES
+PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
 SUBPROJECTS = MDModules 
