fixup for preference panes
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@27754 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/Preferences/Info.plist
+++ b/GWMetadata/Preferences/Info.plist
@@ -1,10 +1,10 @@
 
 {
-  GSBundleIdentifier = org.gnustep.mdindexingmodule;
-	GSBundleVersion = "1.0";
-	GSPrefPaneIconFile = "MDIndexing.tiff";
-	GSPrefPaneIconLabel = "Indexing";
+  CFBundleIdentifier = org.gnustep.mdindexingmodule;
+  GSBundleVersion = "1.0";
   NSExecutable = MDIndexing;
-	NSMainNibFile = MDIndexing;
-	NSPrincipalClass = MDIndexing;
+  NSMainNibFile = MDIndexing;
+  NSPrefPaneIconFile = "MDIndexing.tiff";
+  NSPrefPaneIconLabel = "Indexing";
+  NSPrincipalClass = MDIndexing;
 }
