--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -2,15 +2,16 @@
     ApplicationName = "GWorkspace";
     ApplicationDescription = "GNUstep Workspace Manager";
     ApplicationIcon = "FileManager.tiff";
-    ApplicationRelease = "0.8.7";
-    NSBuildVersion = "09 2008";
+    ApplicationRelease = "0.8.8";
+    NSBuildVersion = "11 2009";
     Authors = (
-      "Enrico Sersale <enrico\@fibernet.ro>",
+      "Riccardo Mottola",
+      "Enrico Sersale",
       "Documentation and Help contents by:",
       "Dennis Leeuw <dleeuw@made-it.com>"
     );
     URL = "http://www.gnustep.org/experience/GWorkspace.html";
-    Copyright = "Copyright (C) 2003-2008 Free Software Foundation, Inc.";
+    Copyright = "Copyright (C) 2003-2009 Free Software Foundation, Inc.";
     CopyrightDescription = "Released under the GNU General Public License 2.0 or later";
     NSIcon = "FileManager.tiff";
     NSRole = "Viewer";
