Implement an Open in Workspace service command.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31104 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -15,6 +15,18 @@
     CopyrightDescription = "Released under the GNU General Public License 2.0 or later";
     NSIcon = "FileManager.tiff";
     NSRole = "Viewer";
+    NSServices = (
+      {
+        NSMenuItem = {
+          English = "Open in GWorkspace";
+          German = "In GWorkspace \U00F6ffnen";
+          default = "Open in GWorkspace";
+        };
+        NSMessage = openInWorkspace;
+        NSPortName = GWorkspace;
+        NSSendTypes = ( NSStringPboardType );
+      }
+    );
     NSTypes = (
     {
       NSUnixExtensions = ( "inspector" );
