implement opening of webloc files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@31511 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -35,6 +35,9 @@
       {
         NSUnixExtensions = ( "lsf" );
         NSIcon = "LiveSearchFolder.tiff";
-      }        
+      },
+      {
+	NSUnixExtensions = ( "webloc" );
+      }
   );
 }
