Correct makefiles to use local version and not installed one.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@33014 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/gmds/mdextractor/GNUmakefile.in
+++ b/GWMetadata/gmds/mdextractor/GNUmakefile.in
@@ -10,8 +10,12 @@ mdextractor_OBJC_FILES = mdextractor.m \
                   updater.m 
 
 mdextractor_TOOL_LIBS += -lgnustep-gui
-mdextractor_TOOL_LIBS += -lMDKit
-mdextractor_TOOL_LIBS += -lDBKit
+mdextractor_TOOL_LIBS += -L../../../GWMetadata/MDKit/MDKit.framework -lMDKit
+mdextractor_TOOL_LIBS += -L../../../DBKit/$(GNUSTEP_OBJ_DIR) -lDBKit
+mdextractor_TOOL_LIBS += -L../../../FSNode/FSNode.framework -lFSNode
+ADDITIONAL_INCLUDE_DIRS += -I../../../GWMetadata/MDKit
+ADDITIONAL_INCLUDE_DIRS += -I../../../GWMetadata/gmds
+ADDITIONAL_INCLUDE_DIRS += -I../../../DBKit
 
 -include GNUmakefile.preamble
 
