--- a/GWMetadata/gmds/mdfind/GNUmakefile.in
+++ b/GWMetadata/gmds/mdfind/GNUmakefile.in
@@ -11,7 +11,10 @@ endif
 $(TOOL_NAME)_OBJC_FILES = \
 mdfind.m 
 
-$(TOOL_NAME)_TOOL_LIBS += -lMDKit
+$(TOOL_NAME)_TOOL_LIBS += -L../../../GWMetadata/MDKit/MDKit.framework -lMDKit
+$(TOOL_NAME)_TOOL_LIBS += -L../../../DBKit/$(GNUSTEP_OBJ_DIR) -lDBKit
+$(TOOL_NAME)_TOOL_LIBS += -L../../../FSNode/FSNode.framework -lFSNode
+ADDITIONAL_INCLUDE_DIRS += -I../../../GWMetadata/MDKit
     				 
 -include GNUmakefile.preamble
 
