--- a/GWMetadata/gmds/gmds/config.h.in
+++ b/GWMetadata/gmds/gmds/config.h.in
@@ -1,4 +1,4 @@
-/* gmds/config.h.in.  Generated from configure.ac by autoheader.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
 
 /* debug logging */
 #undef GW_DEBUG_LOG
@@ -45,11 +45,11 @@
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
 
+/* Define to the home page for this package. */
+#undef PACKAGE_URL
+
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
-
-/* Path to unzip */
-#undef UNZIP_PATH
