use configure in MDFinder subproject
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@36411 72102866-910b-0410-8b05-ffd578937521

--- a/GWMetadata/MDFinder/GNUmakefile.in
+++ b/GWMetadata/MDFinder/GNUmakefile.in
@@ -20,10 +20,7 @@ MDFinder_LANGUAGES = Resources/English
 MDFinder_OBJC_FILES = main.m \
                   MDFinder.m 
 
-ADDITIONAL_GUI_LIBS += -lMDKit
-ADDITIONAL_GUI_LIBS += -lFSNode
-
--include GNUmakefile.preamble
+include GNUmakefile.preamble
 
 -include GNUmakefile.local
 
