staroffice is dead, long live LibreOffice
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@37261 72102866-910b-0410-8b05-ffd578937521

--- a/Apps_wrappers/LibreOffice.app/Resources/Info-gnustep.plist
+++ b/Apps_wrappers/LibreOffice.app/Resources/Info-gnustep.plist
@@ -1,5 +1,5 @@
 {
-  NSExecutable = "StarOffice";
+  NSExecutable = "LibreOffice";
   NSIcon = "StarOffice.tiff";
 	XAppWrapper = YES;
   NSTypes = (
