--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -2,8 +2,8 @@
     ApplicationName = "GWorkspace";
     ApplicationDescription = "GNUstep Workspace Manager";
     ApplicationIcon = "FileManager.tiff";
-    ApplicationRelease = "0.9.2";
-    NSBuildVersion = "03 2013";
+    ApplicationRelease = "0.9.3";
+    NSBuildVersion = "05 2014";
     Authors = (
       "Riccardo Mottola",
       "Enrico Sersale",
@@ -11,7 +11,7 @@
       "Dennis Leeuw <dleeuw@made-it.com>"
     );
     URL = "http://www.gnustep.org/experience/GWorkspace.html";
-    Copyright = "Copyright (C) 2003-2013 Free Software Foundation, Inc.";
+    Copyright = "Copyright (C) 2003-2014 Free Software Foundation, Inc.";
     CopyrightDescription = "Released under the GNU General Public License 2.0 or later";
     NSIcon = "FileManager.tiff";
     NSRole = "Viewer";
@@ -21,6 +21,7 @@
           English = "Open in GWorkspace";
           German = "In GWorkspace \U00F6ffnen";
 	  French = "Ouvrir dans GWorkspace";
+	  Italian = "Aprire in GWorkspace";
           default = "Open in GWorkspace";
         };
         NSMessage = openInWorkspace;
