--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -1,4 +1,4 @@
-feq ($(GNUSTEP_MAKEFILES),)
+ifeq ($(GNUSTEP_MAKEFILES),)
  GNUSTEP_MAKEFILES := $(shell gnustep-config --variable=GNUSTEP_MAKEFILES 2>/dev/null)
   ifeq ($(GNUSTEP_MAKEFILES),)
     $(warning )
