--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -10,6 +10,7 @@ VERSION = @PACKAGE_VERSION@
 # subprojects
 #
 SUBPROJECTS = Finder/Modules 
+SUBPROJECTS = Thumbnailer
 
 #
 # MAIN APP
@@ -111,7 +112,7 @@ Dialogs/CompletionField.m \
 Dialogs/StartAppWin.m \
 Fiend/Fiend.m \
 Fiend/FiendLeaf.m 
-						 
+
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
