Call makre and remove thumbnails directly and not in a service, remove the corresponding service and just instantiate the class.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39157 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -9,8 +9,8 @@ VERSION = @PACKAGE_VERSION@
 #
 # subprojects
 #
-SUBPROJECTS = Finder/Modules 
-SUBPROJECTS = Thumbnailer
+SUBPROJECTS = Finder/Modules \
+	Thumbnailer
 
 #
 # MAIN APP
@@ -111,7 +111,9 @@ Dialogs/RunExternalController.m \
 Dialogs/CompletionField.m \
 Dialogs/StartAppWin.m \
 Fiend/Fiend.m \
-Fiend/FiendLeaf.m 
+Fiend/FiendLeaf.m \
+Thumbnailer/GWThumbnailer.m \
+
 
 -include GNUmakefile.preamble
 
