--- a/Recycler/RecyclerInfo.plist
+++ b/Recycler/RecyclerInfo.plist
@@ -5,12 +5,13 @@
     ApplicationDescription = "Workspace Manager";
     ApplicationIcon = "Recycler.tiff";
     ApplicationName = "Recycler";
-    ApplicationRelease = "0.9.1";
-    NSBuildVersion = "05 2011";
+    ApplicationRelease = "0.9.3";
+    NSBuildVersion = "05 2015";
+    CFBundleIdentifier = "org.gnustep.GWorkspace.Recycler";
     Authors = (
       "Riccardo Mottola",
       "Enrico Sersale"
     );
-    Copyright = "Copyright (C) 2004-2012 Free Software Foundation, Inc.";
+    Copyright = "Copyright (C) 2004-2015 Free Software Foundation, Inc.";
     CopyrightDescription = "Released under the GNU General Public License 2.0 or later";
 }
