make icon standard in resources
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39188 72102866-910b-0410-8b05-ffd578937521

--- a/Recycler/GNUmakefile.in
+++ b/Recycler/GNUmakefile.in
@@ -13,7 +13,7 @@ Recycler_APPLICATION_ICON=Recycler.tiff
 Recycler_HAS_RESOURCE_BUNDLE = yes
 
 Recycler_RESOURCE_FILES = \
-    Resources/Images/* \
+    Resources/Recycler.tiff \
     Resources/English.lproj 
 
 Recycler_LANGUAGES = Resources/English 
