Make the thumbnailer a (releasable) singleton and instantiate it through sharedThumbnailer. It may be released, but if it exists, it is a singleton.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39209 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/GWorkspaceInfo.plist
+++ b/GWorkspace/GWorkspaceInfo.plist
@@ -4,7 +4,7 @@
     ApplicationIcon = "FileManager.tiff";
     ApplicationRelease = "0.9.3";
     NSBuildVersion = "05 2015";
-    CFBundleIdentifier = "org.gnustep.GWorkspace"
+    CFBundleIdentifier = "org.gnustep.GWorkspace";
     Authors = (
       "Riccardo Mottola",
       "Enrico Sersale",
