--- a/GWorkspace/Finder/Modules/FModuleName/GNUmakefile.in
+++ b/GWorkspace/Finder/Modules/FModuleName/GNUmakefile.in
@@ -17,9 +17,9 @@ FModuleName_RESOURCE_FILES = \
     Resources/Images/* \
     Resources/FModuleName.gorm
 
--include GNUmakefile.preamble
+include GNUmakefile.preamble
 
 include $(GNUSTEP_MAKEFILES)/bundle.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
