--- a/GWorkspace/Finder/Modules/FModuleKind/GNUmakefile.in
+++ b/GWorkspace/Finder/Modules/FModuleKind/GNUmakefile.in
@@ -17,9 +17,9 @@ FModuleKind_RESOURCE_FILES = \
     Resources/Images/* \
     Resources/FModuleKind.gorm
 
--include GNUmakefile.preamble
+include GNUmakefile.preamble
 
 include $(GNUSTEP_MAKEFILES)/bundle.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
