remove special Inspector.make file and handle everything in GNUmake

--- a/Inspector/ContentViewers/GNUmakefile.in
+++ b/Inspector/ContentViewers/GNUmakefile.in
@@ -2,7 +2,6 @@
 PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
 
-include ../inspector.make
 
 ifneq ($(PDFKIT),no)
 SUBPROJECTS = \
@@ -35,5 +34,5 @@ endif
 
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
