--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -3,7 +3,10 @@ PACKAGE_NEEDS_CONFIGURE = YES
 
 PACKAGE_NAME = gworkspace
 include $(GNUSTEP_MAKEFILES)/common.make
-include inspector.make
+
+PDFKIT=@have_pdfkit@
+SH_PATH=@SH_PATH@
+FILE_PATH=@FILE_PATH@
 
 SUBPROJECTS = ContentViewers
 
@@ -45,8 +48,8 @@ ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
     SHARED_LD_POSTFLAGS += -lgnustep-base -lgnustep-gui -lFSNode
   endif
 endif
-					 
--include GNUmakefile.preamble
+
+include GNUmakefile.preamble
 
 -include GNUmakefile.local
 
