greatly simplify GWMetadata build system

--- a/GWMetadata/GNUmakefile.in
+++ b/GWMetadata/GNUmakefile.in
@@ -9,13 +9,13 @@ include $(GNUSTEP_MAKEFILES)/common.make
 #
 SUBPROJECTS = MDKit \
               gmds \
-	      			Preferences \
-	      			MDFinder
+	      Preferences \
+	      MDFinder
 
--include GNUmakefile.preamble
+include GNUmakefile.preamble
 
 -include GNUmakefile.local
 
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
