--- a/GWMetadata/configure.ac
+++ b/GWMetadata/configure.ac
@@ -13,7 +13,6 @@ AC_CHECK_FUNCS(getpwnam getpwuid geteuid getlogin)
 
 AC_CONFIG_AUX_DIR([$GNUSTEP_MAKEFILES])
 
-AC_CONFIG_SUBDIRS(MDKit MDFinder Preferences gmds)
 
 #--------------------------------------------------------------------
 # Determine the host, build, and target systems
@@ -74,6 +73,11 @@ int main ()
 }
   ],, sqlite_version_ok=no,[echo "wrong sqlite3 version"])
 
+  if test "$have_sqlite" = yes; then
+    SQLITE_LIB_DIRS="$with_sqlite_library -lsqlite3"
+    SQLITE_INCLUDE_DIRS="$with_sqlite_include"
+  fi
+
 fi
 
 if test "$have_sqlite" = no; then
@@ -91,6 +95,40 @@ else
   fi
 fi
 
+AC_SUBST(SQLITE_LIB_DIRS)
+AC_SUBST(SQLITE_INCLUDE_DIRS)
+
+
+#--------------------------------------------------------------------
+# We need PDFKit
+#--------------------------------------------------------------------
+case "$target_os" in
+  darwin*)
+    AC_CHECK_PDFKIT_DARWIN(have_pdfkit=yes, have_pdfkit=no)
+    ;;
+  *)	
+    AC_CHECK_PDFKIT(have_pdfkit=yes, have_pdfkit=no)
+    ;;
+esac
+
+if test "$have_pdfkit" = "no"; then
+  AC_MSG_NOTICE([The PDFKit framework can't be found.])
+  AC_MSG_NOTICE([The pdf extractor will not be built.])  
+fi
+
+AC_SUBST(have_pdfkit)
+
+#--------------------------------------------------------------------
+# We need unzip
+#--------------------------------------------------------------------
+AC_ARG_WITH([unzip], [  --with-unzip=PROG  Use PROG as unzip], [UNZ_PATH=$withval], [UNZ_PATH=none])
+
+if test "x$UNZ_PATH" = "xnone"; then
+	AC_PATH_PROGS([UNZ_PATH], [unzip unzip], [none])
+fi
+
+AC_DEFINE_UNQUOTED([UNZIP_PATH], ["$UNZ_PATH"], [Path to unzip])
+
 #--------------------------------------------------------------------
 # Debug logging
 #--------------------------------------------------------------------
@@ -106,6 +144,18 @@ fi
 
 AC_DEFINE_UNQUOTED([GW_DEBUG_LOG], [$GW_DEBUG_LOG], [debug logging])
 
-AC_CONFIG_FILES([GNUmakefile])
+AC_CONFIG_HEADERS([MDKit/config.h gmds/mdextractor/Extractors/extractors.h])
+
+AC_CONFIG_FILES([
+  GNUmakefile
+  MDKit/GNUmakefile
+  Preferences/GNUmakefile
+  MDFinder/GNUmakefile
+  gmds/GNUmakefile
+  gmds/gmds/GNUmakefile
+  gmds/gmds/GNUmakefile.preamble
+  gmds/mdextractor/GNUmakefile
+  gmds/mdextractor/Extractors/GNUmakefile
+  ])
 
 AC_OUTPUT
