--- a/GWMetadata/gmds/gmds/GNUmakefile.preamble.in
+++ b/GWMetadata/gmds/gmds/GNUmakefile.preamble.in
@@ -8,6 +8,7 @@ ADDITIONAL_OBJCFLAGS += -Wall
 ADDITIONAL_CFLAGS += -Wall
 
 # Additional include directories the compiler should search
+ADDITIONAL_INCLUDE_DIRS += -I../../MDKit
 ADDITIONAL_INCLUDE_DIRS += -I../ @SQLITE_INCLUDE_DIRS@
 
 # Additional LDFLAGS to pass to the linker
