--- a/GWMetadata/gmds/mdextractor/Extractors/HtmlExtractor/GNUmakefile
+++ b/GWMetadata/gmds/mdextractor/Extractors/HtmlExtractor/GNUmakefile
@@ -20,4 +20,4 @@ include $(GNUSTEP_MAKEFILES)/bundle.make
 
 -include GNUmakefile.preamble
 -include GNUmakefile.local
--include GNUmakefile.postamble
+include GNUmakefile.postamble
