--- a/GWMetadata/Preferences/GNUmakefile
+++ b/GWMetadata/Preferences/GNUmakefile
@@ -31,7 +31,7 @@ endif
 include $(GNUSTEP_MAKEFILES)/bundle.make
 
 -include GNUmakefile.preamble
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
 
 
