--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -49,6 +49,6 @@ endif
 
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
 include $(GNUSTEP_MAKEFILES)/Master/nsis.make
