--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -57,6 +57,6 @@ include $(GNUSTEP_MAKEFILES)/framework.make
 
 include $(GNUSTEP_MAKEFILES)/aggregate.make
 
--include GNUmakefile.postamble
+include GNUmakefile.postamble
 
 
