LIBRARIES_DEPEND_UPON for frameworks

--- a/FSNode/ExtendedInfo/Role/GNUmakefile.in
+++ b/FSNode/ExtendedInfo/Role/GNUmakefile.in
@@ -16,7 +16,7 @@ Role_OBJC_FILES = ExtInfoRole.m
 
 Role_PRINCIPAL_CLASS = ExtInfoRole
 
-LIBRARIES_DEPEND_UPON += -lFSNode
+LIBRARIES_DEPEND_UPON += -lFSNode $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
 
 Role_LANGUAGES = \
 	English \
