--- a/DBKit/GNUmakefile
+++ b/DBKit/GNUmakefile
@@ -23,6 +23,8 @@ DBKPathsTree.h
 libDBKit_HEADER_FILES_DIR = .
 libDBKit_HEADER_FILES_INSTALL_DIR=DBKit
 
+LIBRARIES_DEPEND_UPON += $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
+
 ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
   ifeq ($(OBJC_RUNTIME_LIB), gnu)
     SHARED_LD_POSTFLAGS += -lgnustep-base
