--- a/FSNode/GNUmakefile.in
+++ b/FSNode/GNUmakefile.in
@@ -51,7 +51,7 @@ FSNode_LANGUAGES = \
 	French \
 	Spanish \
 
-
+LIBRARIES_DEPEND_UPON += $(GUI_LIBS) $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
 
 ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
   ifeq ($(OBJC_RUNTIME_LIB), gnu)
