--- a/GWMetadata/MDKit/GNUmakefile.in
+++ b/GWMetadata/MDKit/GNUmakefile.in
@@ -13,10 +13,9 @@ include Version
 MDKit_PRINCIPAL_CLASS = MDKQuery
 MDKit_HAS_RESOURCE_BUNDLE = yes
 
-#MDKit_GUI_LIBS += -lFSNode
 LIBRARIES_DEPEND_UPON += -lFSNode
 LIBRARIES_DEPEND_UPON += -lDBKit
-LIBRARIES_DEPEND_UPON += -lgnustep-gui $(SYSTEM_LIBS)
+LIBRARIES_DEPEND_UPON += $(GUI_LIBS) $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
 
 MDKit_RESOURCE_FILES = \
     Resources/attributes.plist \
