--- a/Inspector/GNUmakefile.in
+++ b/Inspector/GNUmakefile.in
@@ -43,6 +43,9 @@ Inspector_HEADER_FILES = \
          Inspector.h \
          ContentViewersProtocol.h
 
+LIBRARIES_DEPEND_UPON += -lFSNode
+LIBRARIES_DEPEND_UPON += $(GUI_LIBS) $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
+
 ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
   ifeq ($(OBJC_RUNTIME_LIB), gnu)
     SHARED_LD_POSTFLAGS += -lgnustep-base -lgnustep-gui -lFSNode
