--- a/Operation/GNUmakefile.in
+++ b/Operation/GNUmakefile.in
@@ -24,12 +24,14 @@ Operation_OBJC_FILES = \
 Operation_HEADER_FILES = \
          Operation.h 
 
+LIBRARIES_DEPEND_UPON += $(GUI_LIBS) $(FND_LIBS) $(OBJC_LIBS) $(SYSTEM_LIBS)
+
 ifeq ($(findstring darwin, $(GNUSTEP_TARGET_OS)), darwin)
   ifeq ($(OBJC_RUNTIME_LIB), gnu)
     SHARED_LD_POSTFLAGS += -lgnustep-base -lgnustep-gui
   endif
 endif
-						 
+
 -include GNUmakefile.preamble
 
 -include GNUmakefile.local
