--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -42,6 +42,7 @@ GWorkspace_RESOURCE_FILES = \
   Resources/Portuguese.lproj \
   Resources/Romanian.lproj \
   Resources/Spanish.lproj \
+  Resources/Japanese.lproj \
   GWorkspaceInfo.plist
 
 GWorkspace_LANGUAGES = \
@@ -56,7 +57,8 @@ GWorkspace_LANGUAGES = \
   Resources/Norvegian \
   Resources/Portuguese \
   Resources/Romanian \
-  Resources/Spanish
+  Resources/Spanish \
+  Resources/Japanese
 
 # The Objective-C source files to be compiled
 GWorkspace_OBJC_FILES = main.m \
