add svn support to the gimp wrapper

--- a/Apps_wrappers/gimp.app/Resources/Info-gnustep.plist
+++ b/Apps_wrappers/gimp.app/Resources/Info-gnustep.plist
@@ -38,6 +38,10 @@
     {
       NSUnixExtensions = ( "wmf", "pnm", "bmp", "psd", "psp", "raw", "sgi", "xwd" );
       NSIcon = "GenericImage.tiff";
+    },
+    {
+      NSUnixExtensions = ( "svg" );
+      NSIcon = "FileIcon_.svg.tiff";
     }
   );
 }
