Factor out common functionality between OpenWith and RunExternal controllers into ExecuteController superclass.

--- a/GWorkspace/GNUmakefile.in
+++ b/GWorkspace/GNUmakefile.in
@@ -111,6 +111,7 @@ Preferences/OperationPrefs.m \
 Preferences/DesktopPref.m \
 History/History.m \
 Dialogs/Dialogs.m \
+Dialogs/ExecuteController.m \
 Dialogs/OpenWithController.m \
 Dialogs/RunExternalController.m \
 Dialogs/CompletionField.m \
