base/gui/back dependencies

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,20 +82,13 @@ jobs:
         env:
           TOOLS_MAKE_BRANCH: ${{github.event.inputs.tools_make_branch}}
           LIBS_BASE_BRANCH: ${{github.event.inputs.libs_base_branch}}
+          LIBS_GUI_BRANCH: ${{github.event.inputs.libs_gui_branch}}
+          LIBS_BACK_BRANCH: ${{github.event.inputs.libs_back_branch}}
         run: ./.github/scripts/dependencies.sh
 
       - name: Build source
         run: |
           . $INSTALL_PATH/share/GNUstep/Makefiles/GNUstep.sh
-          ./configure
-          make && make install
-
-      - name: Build libs-back # required by some tests
-        working-directory: ${{env.DEPS_PATH}}
-        run: |
-          . $INSTALL_PATH/share/GNUstep/Makefiles/GNUstep.sh
-          git clone -q -b ${LIBS_BACK_BRANCH:-master} https://github.com/gnustep/libs-back.git
-          cd libs-back
           ./configure
           make && make install
 
